--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ robotpy_extras = [
     # "commands2",
     # "cscore",
     # "phoenix6",
-    # "rev",
+    "rev",
     # "romi",
     # "sim",
     # "xrp",
